gcc/testsuite/algol68/compile/error-mode-stropping-2.a68
# { dg-options "-fstropping=upper" }  #
BEGIN STRUCT (INT i, REAL r) j;
      j := "joo" # { dg-error "CHAR.*STRUCT \\(INT i, REAL r\\)" } #
END
